syntax = "proto3";
package cortex;

service CortexService {
    rpc UploadFile (stream FileChunk) returns (TransferStatus);
    rpc DownloadFile (FileRequest) returns (stream FileChunk);
    rpc SendMessage (ClientMessage) returns (ServerResponse);
}

message FileChunk {
    string file_name = 1;
    bytes content = 2;
    uint64 total_size = 3;
}

message TransferStatus {
    string message = 1;
    bool success = 2;
}

message FileRequest {
    string file_name = 1;
}

message ClientMessage {
    string client_id = 1;
    string text = 2;
}

message ServerResponse {
    string text = 1;
}
